# powerstamper

./: README.md
code/: CMakeLists.txt  Nebbi.cpp  Nebbi.h  Plugin.cpp  Plugin.def  PowerStamper.rc  nebbi_render.cpp  resource.h
